# pico_spec_analyzer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml
docs/: COMMIT_MESSAGE.txt  DEVELOPMENT_LOG.md  IMPLEMENTATION_COMPLETE.md  TOUCH_INTEGRATION.md
include/: config.h
include/audio/: adc_sampler.h  fft_processor.h
include/display/: ili9341.h  theme_manager.h
include/display/themes/: bars.h  mirror.h  radial.h  waterfall.h
include/touch/: xpt2046.h
include/utils/: mock_audio.h
pio/: adc_sampler.pio
scripts/: build.sh  docker-build.sh  flash.sh  monitor.sh  read_serial.py
src/: display_test.c  main.c  main_simple_test.c  spectrum_analyzer.c  spectrum_viz_test.c
src/audio/: adc_sampler.c  fft_processor.c
src/display/: ili9341.c  theme_manager.c
src/display/themes/: bars.c  mirror.c  radial.c  waterfall.c
src/touch/: xpt2046.c
src/utils/: mock_audio.c
